fix width cut off bug Dragon component got postcss'd remove a ton of unneeded elements

--- a/src/frontend/src/assets/styling/style.css
+++ b/src/frontend/src/assets/styling/style.css
@@ -1,3 +1,93 @@
+/* top level elements */
+:root {
+  font:
+    87.5%/100% 'PT Serif',
+    'Times New Roman',
+    'Times',
+    serif;
+  line-height: 19.6px;
+  --maxWidth: 1000px;
+  --desktop: 1024px;
+  --mobile: 768px;
+}
+
+html {
+  overflow: hidden auto;
+  height: 100%;
+  width: 100%;
+}
+
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+#app-container {
+  flex: 1;
+}
+
+/* basic elements */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0.5rem;
+}
+h1 {
+  font-size: 4rem;
+}
+h2 {
+  font-size: 3.5rem;
+}
+h3 {
+  font-size: 3rem;
+}
+p {
+  padding: 0.5rem;
+}
+strong {
+  font-weight: bold;
+}
+
+input[type='text'],
+input[type='search'],
+textarea,
+select {
+  border: none;
+  padding: 0.5rem;
+  background: #fff;
+  font-family: var(--base-font);
+}
+input[type='text'],
+textarea,
+select,
+button {
+  border-radius: 0.4em;
+}
+button {
+  padding: 0.5rem;
+}
+:enabled {
+  cursor: pointer;
+}
+.themed-button {
+  margin: 2px;
+  cursor: pointer;
+  padding: 8px;
+  color: var(--builderControlFG);
+  background: var(--builderControlBG);
+  border: none;
+}
+
+.list {
+  list-style-type: disc;
+  padding-left: 15px;
+}
 .pointer {
   cursor: pointer;
 }
@@ -5,7 +95,6 @@
 .grid {
   display: grid;
 }
-
 .row,
 .column {
   display: flex;
@@ -16,9 +105,10 @@
 .column {
   flex-direction: column;
 }
-:focus-visible {
-  outline: 2px solid lightblue;
-}
 .svg-inline--fa {
   margin: 0rem 0.5rem;
+}
+
+:focus-visible {
+  outline: 2px solid lightblue;
 }
